[gd_scene load_steps=4 format=2]

[ext_resource path="res://fps_controller/fps_controller.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 2.0
radial_segments = 16
rings = 4

[node name="FPSController" type="KinematicBody"]
input_ray_pickable = false
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="FirstPersonCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
current = true
near = 0.01
far = 3000.0

[node name="InteractionRayCast" type="RayCast" parent="FirstPersonCamera"]
enabled = true
cast_to = Vector3( 0, 0, -10 )
collide_with_areas = true

[node name="Avatar" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Reticle" type="ColorRect" parent="CanvasLayer/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
rect_rotation = 45.0

[node name="InteractionTargetLabel" type="Label" parent="CanvasLayer/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -60.0
margin_right = 20.0
margin_bottom = -46.0
align = 1
